# photonic-director

./: .gitignore  CMakeLists.txt  Readme.md
assets/: imgui.ini  light_shader.fragment  light_shader.vertex  object_shader.fragment  object_shader.vertex
assets/fixtures/: advanced_color.xml  led_ball.xml  martin_mac500.xml  relais.xml  showtec_1w_rgb_led_par_64.xml  showtec_powershot_9_q5_5ch.xml  simple_color.xml  single_channel.xml
resources/: CinderApp.icns
src/: ConfigManager.cpp  ConfigManager.h  Effects.cpp  Effects.h  Light.cpp  Light.h  LightCalibrator.cpp  LightCalibrator.h  LightComponent.cpp  LightComponent.h  Output.cpp  Output.h  PhotonicDirectorApp.cpp  Scene.cpp  Scene.h  UnityConnector.cpp  UnityConnector.h  Utils.h  Visualizer.cpp  Visualizer.h
src/Effects/: CloseInLocation.cpp  CloseInLocation.h  ConditionalVolume.cpp  ConditionalVolume.h  Desaturate.cpp  Desaturate.h  Drifter.cpp  Drifter.h  Droplet.cpp  Droplet.h  FightingInputs.cpp  FightingInputs.h  FlashLight.cpp  FlashLight.h  LocationFollow.cpp  LocationFollow.h  MidiLight.cpp  MidiLight.h  MovingHead.cpp  MovingHead.h  MuteAll.cpp  MuteAll.h  OriginatingWave.cpp  OriginatingWave.h  Preset.cpp  Preset.h  PulseStatic.cpp  PulseStatic.h  Ripples.cpp  Ripples.h  ShutDown.cpp  ShutDown.h  ShutDownHuman.cpp  ShutDownHuman.h  StoryTeller.cpp  StoryTeller.h  VUMeter.cpp  VUMeter.h  VolumeLocation.cpp  VolumeLocation.h  (+2 more)
xcode/PhotonicDirector.xcodeproj/: project.pbxproj
